--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<p>Richard Barney</p>
+<p>CISS301 Operating Systems and Cloud Computing</p>
+<p>Dropbox Assignment 5</p>
 <!DOCTYPE html>
 <html>
 <head>
